# UsableFunctions

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  MANIFEST.in  README.md  UF.py  UFuse.py  __init__.py  build.py  index.html  index.md  pyproject.toml  requirements.txt  requirenments.txt  setup.py
.github/workflows/: deploy.yml  python-package.yml
UsableFunctions/: UF.py  __init__.py
docs/: index.html  script.js  styles.css
root/: index.html
